# permissions-postgres

./: README.md  db.sqlite3  pyproject.toml
per_post/: asgi.py  manage.py  settings.py  urls.py
per_post/per_post/: settings.py  urls.py  wsgi.py
perpost/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
perpost/migrations/: 0001_initial.py
